third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/add_assign/all_fields_skipped.rs
#[derive(derive_more::AddAssign)]
struct Foo(#[add_assign(skip)] i32);

fn main() {}
